--- a/apps/pet-market-be/package.json
+++ b/apps/pet-market-be/package.json
@@ -86,11 +86,14 @@
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@prisma/client": "^6.19.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "^11.0.0"
+    "@nestjs/testing": "^11.0.0",
+    "dotenv": "^16.4.7",
+    "tsx": "^4.20.6"
   }
 }
