--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest-util": "^30.0.2",
     "nx": "22.1.1",
     "prettier": "^2.6.2",
+    "prisma": "^6.19.0",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
