--- a/package.json
+++ b/package.json
@@ -42,10 +42,15 @@
     "apps/*"
   ],
   "dependencies": {
+    "@apollo/server": "^5.2.0",
+    "@as-integrations/express5": "^1.1.2",
+    "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
+    "graphql": "^16.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   }
