--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@angular-devkit/core": "~20.3.0",
+    "@angular-devkit/schematics": "~20.3.0",
+    "@angular/build": "~20.3.0",
+    "@angular/cli": "~20.3.0",
+    "@angular/compiler-cli": "~20.3.0",
+    "@angular/language-service": "~20.3.0",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
+    "@nx/angular": "^22.1.1",
     "@nx/eslint": "22.1.1",
     "@nx/eslint-plugin": "22.1.1",
     "@nx/jest": "22.1.1",
@@ -16,12 +23,16 @@
     "@nx/node": "22.1.1",
     "@nx/web": "22.1.1",
     "@nx/webpack": "22.1.1",
+    "@schematics/angular": "~20.3.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
+    "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
+    "@typescript-eslint/utils": "^8.40.0",
+    "angular-eslint": "^20.3.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.0.2",
@@ -42,16 +53,29 @@
     "apps/*"
   ],
   "dependencies": {
+    "@angular-devkit/build-angular": "~20.3.0",
+    "@angular/common": "~20.3.0",
+    "@angular/compiler": "~20.3.0",
+    "@angular/core": "~20.3.0",
+    "@angular/forms": "~20.3.0",
+    "@angular/platform-browser": "~20.3.0",
+    "@angular/platform-server": "~20.3.0",
+    "@angular/router": "~20.3.0",
+    "@angular/ssr": "~20.3.0",
     "@apollo/server": "^5.2.0",
-    "@as-integrations/express5": "^1.1.2",
     "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.6.0",
+    "express": "^4.21.2",
     "graphql": "^16.12.0",
+    "postcss": "^8.5.6",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "tailwindcss": "^4.1.18",
+    "zone.js": "~0.15.0"
   }
 }
