update styles config tailwind

--- a/apps/pet-market-web/tsconfig.app.json
+++ b/apps/pet-market-web/tsconfig.app.json
@@ -4,6 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "types": ["node"],
     "composite": false,
+    "declarationMap": false,
     "declaration": false,
     "emitDeclarationOnly": false,
     // "moduleResolution": "node",
