update daisyUI to 5.5.14, rename scss to css

--- a/apps/pet-market-web/project.json
+++ b/apps/pet-market-web/project.json
@@ -21,7 +21,7 @@
             "input": "apps/pet-market-web/public"
           }
         ],
-        "styles": ["apps/pet-market-web/src/styles.scss"],
+        "styles": ["apps/pet-market-web/src/styles.css"],
         "server": "apps/pet-market-web/src/main.server.ts",
         "ssr": {
           "entry": "apps/pet-market-web/src/server.ts"
