--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@angular/router": "~20.3.0",
     "@angular/ssr": "~20.3.0",
     "@apollo/server": "^5.2.0",
+    "@as-integrations/express5": "^1.1.0",
     "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
@@ -71,7 +72,7 @@
     "@nestjs/platform-express": "^11.0.0",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.6.0",
-    "express": "^4.21.2",
+    "express": "^5.0.0",
     "graphql": "^16.12.0",
     "postcss": "^8.5.6",
     "reflect-metadata": "^0.1.13",
