--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nx/webpack": "22.1.1",
     "@schematics/angular": "~20.3.0",
     "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
+    "@swc/core": "^1.15.0",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
     "@types/express": "^4.17.21",
@@ -53,6 +53,11 @@
     "packages/*",
     "apps/*"
   ],
+  "overrides": {
+    "@apollo/server-plugin-landing-page-graphql-playground": {
+      "@apollo/server": "^5.2.0"
+    }
+  },
   "dependencies": {
     "@angular-devkit/build-angular": "~20.3.0",
     "@angular/common": "~20.3.0",
