--- a/apps/pet-market-web/tsconfig.app.json
+++ b/apps/pet-market-web/tsconfig.app.json
@@ -2,14 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node"],
-    "composite": false,
-    "declarationMap": false,
-    "declaration": false,
-    "emitDeclarationOnly": false,
-    // "moduleResolution": "node",
-    // "module": "esnext",
-    // "lib": ["es2022", "dom"],
+    "types": ["node"]
   },
   "include": ["src/**/*.ts"],
   "exclude": [
