update nx configuration to use SCSS for Angular components and remove unused CSS files

--- a/nx.json
+++ b/nx.json
@@ -72,7 +72,7 @@
       "unitTestRunner": "none"
     },
     "@nx/angular:component": {
-      "style": "css"
+      "style": "scss"
     }
   }
 }
