--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@angular/platform-server": "~20.3.0",
     "@angular/router": "~20.3.0",
     "@angular/ssr": "~20.3.0",
+    "@apollo/client": "^4.0.11",
     "@apollo/server": "^5.2.0",
     "@as-integrations/express5": "^1.1.0",
     "@nestjs/apollo": "^13.2.1",
@@ -75,11 +76,14 @@
     "@nestjs/core": "^11.0.0",
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@ngrx/signals": "^21.0.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "apollo-angular": "^13.0.0",
     "axios": "^1.6.0",
     "express": "^5.0.0",
     "graphql": "^16.12.0",
     "postcss": "^8.5.6",
+    "@prisma/client": "^6.19.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tailwindcss": "^4.1.18",
