chore: update Dockerfiles to include express dependency for Angular SSR and improve file ownership; enhance .dockerignore for YAML support

--- a/.dockerignore
+++ b/.dockerignore
@@ -39,6 +39,7 @@ Thumbs.db
 Dockerfile
 Dockerfile.*
 docker-compose*.yml
+docker-compose*.yaml
 .dockerignore
 
 # Environment files (should be mounted or passed as env vars)
