--- a/package.json
+++ b/package.json
@@ -11,42 +11,42 @@
     "@angular/cli": "~20.3.0",
     "@angular/compiler-cli": "~20.3.0",
     "@angular/language-service": "~20.3.0",
-    "@eslint/js": "^9.8.0",
+    "@eslint/js": "^9.39.0",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.0",
-    "@nx/angular": "^22.1.1",
-    "@nx/eslint": "22.1.1",
-    "@nx/eslint-plugin": "22.1.1",
-    "@nx/jest": "22.1.1",
-    "@nx/js": "22.1.1",
-    "@nx/nest": "^22.1.1",
-    "@nx/node": "22.1.1",
-    "@nx/web": "22.1.1",
-    "@nx/webpack": "22.1.1",
+    "@nestjs/testing": "^11.1.0",
+    "@nx/angular": "22.3.3",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/jest": "22.3.3",
+    "@nx/js": "22.3.3",
+    "@nx/nest": "22.3.3",
+    "@nx/node": "22.3.3",
+    "@nx/web": "22.3.3",
+    "@nx/webpack": "22.3.3",
     "@schematics/angular": "~20.3.0",
-    "@swc-node/register": "~1.9.1",
+    "@swc-node/register": "~1.9.2",
     "@swc/core": "^1.15.0",
-    "@swc/helpers": "~0.5.11",
+    "@swc/helpers": "~0.5.17",
     "@swc/jest": "~0.2.38",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
-    "@types/node": "20.19.9",
-    "@typescript-eslint/utils": "^8.40.0",
-    "angular-eslint": "^20.3.0",
+    "@types/node": "^22.15.0",
+    "@typescript-eslint/utils": "^8.51.0",
+    "angular-eslint": "^20.7.0",
     "daisyui": "^5.5.14",
-    "eslint": "^9.8.0",
+    "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.0.2",
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
-    "nx": "22.1.1",
-    "prettier": "^2.6.2",
+    "nx": "22.3.3",
+    "prettier": "^3.7.0",
     "prisma": "^6.19.0",
     "ts-jest": "^29.4.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0",
+    "typescript-eslint": "^8.51.0",
     "webpack-cli": "^5.1.4"
   },
   "workspaces": [
@@ -55,7 +55,7 @@
   ],
   "overrides": {
     "@apollo/server-plugin-landing-page-graphql-playground": {
-      "@apollo/server": "^5.2.0"
+      "@apollo/server": "$@apollo/server"
     }
   },
   "dependencies": {
@@ -71,12 +71,12 @@
     "@apollo/client": "^4.0.11",
     "@apollo/server": "^5.2.0",
     "@as-integrations/express5": "^1.1.0",
-    "@nestjs/apollo": "^13.0.3",
-    "@nestjs/common": "^11.0.11",
-    "@nestjs/core": "^11.0.11",
-    "@nestjs/graphql": "^13.0.3",
-    "@nestjs/platform-express": "^11.0.0",
-    "@ngrx/signals": "^21.0.1",
+    "@nestjs/apollo": "^13.2.0",
+    "@nestjs/common": "^11.1.0",
+    "@nestjs/core": "^11.1.0",
+    "@nestjs/graphql": "^13.2.0",
+    "@nestjs/platform-express": "^11.1.0",
+    "@ngrx/signals": "^20.1.0",
     "@tailwindcss/postcss": "^4.1.18",
     "apollo-angular": "^13.0.0",
     "axios": "^1.6.0",
