--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
     "jest-environment-node": "^30.0.2",
+    "jest-preset-angular": "^16.0.0",
     "jest-util": "^30.0.2",
     "nx": "22.3.3",
     "prettier": "^3.7.0",
@@ -66,6 +68,7 @@
     "@angular/core": "~20.3.0",
     "@angular/forms": "~20.3.0",
     "@angular/platform-browser": "~20.3.0",
+    "@angular/platform-browser-dynamic": "~20.3.0",
     "@angular/platform-server": "~20.3.0",
     "@angular/router": "~20.3.0",
     "@angular/ssr": "~20.3.0",
@@ -78,13 +81,13 @@
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-express": "^11.1.0",
     "@ngrx/signals": "^20.1.0",
+    "@prisma/client": "^6.19.0",
     "@tailwindcss/postcss": "^4.1.18",
     "apollo-angular": "^13.0.0",
     "axios": "^1.6.0",
     "express": "^5.0.0",
     "graphql": "^16.12.0",
     "postcss": "^8.5.6",
-    "@prisma/client": "^6.19.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tailwindcss": "^4.1.18",
