add shared types, update Dockerfile

--- a/apps/pet-market-web/tsconfig.app.json
+++ b/apps/pet-market-web/tsconfig.app.json
@@ -12,5 +12,10 @@
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "jest.config.cts"
+  ],
+  "references": [
+    {
+      "path": "../../libs/shared/types/tsconfig.lib.json"
+    }
   ]
 }
