--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@eslint/js": "^9.39.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.1.0",
+    "@netlify/angular-runtime": "^3.0.1",
     "@nx/angular": "22.3.3",
     "@nx/eslint": "22.3.3",
     "@nx/eslint-plugin": "22.3.3",
